<resources>
    <string name="app_name">newProject</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="or">OR</string>
</resources>