<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="password"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColorHint="@color/hintColor" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/signup" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>